# WirePort

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/: repository-metadata.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  EmptyState.tsx  Header.tsx  ProfileDetails.tsx  SettingsModal.tsx  SettingsPanel.tsx  Sidebar.tsx  Sparkline.tsx  Toggle.tsx
src/types/: index.ts
