[package]
name = "wireport"
version = "0.1.0"
description = "WireGuard to SOCKS5/HTTP proxy desktop app for macOS, Windows, and Linux"
authors = ["Rihanoor <rihanoor@lightib.com>"]
license = "MIT"
edition = "2021"
homepage = "https://github.com/rihanoor/WirePort"
repository = "https://github.com/rihanoor/WirePort"
readme = "../README.md"
keywords = ["wireguard", "socks5", "proxy", "tauri", "desktop"]
categories = ["gui", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wireport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "WirePort"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
reqwest = { version = "0.13.4", features = ["socks", "json"] }
chrono = "0.4"


